# dataset-python

./: .gitignore  PLAN.md  PROCESS.md  README.md
behavioral/chain_of_responsibility/p1/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
behavioral/chain_of_responsibility/p1/src/: main.py
behavioral/chain_of_responsibility/p1/tests/: conftest.py
behavioral/chain_of_responsibility/p1/tests/integration/: test_chain_endpoint.py
behavioral/chain_of_responsibility/p1/tests/unit/: test_jwt_auth.py  test_rate_limit.py  test_role_authorization.py  test_schema_validation.py  test_validate_request_use_case.py
behavioral/iterator/p5/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
behavioral/iterator/p5/tests/unit/: test_kafka_source.py  test_stream_iterator.py  test_use_cases.py
behavioral/mediator/p3/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
behavioral/mediator/p3/src/config/: asgi.py  settings.py  settings_test.py  urls.py
behavioral/mediator/p3/src/realtime_notifications/: apps.py  models.py  routing.py  urls.py  views.py
behavioral/mediator/p3/tests/integration/: test_consumer.py  test_repository.py  test_views.py
behavioral/mediator/p3/tests/unit/: test_channel_mediator.py  test_use_cases.py
behavioral/memento/p1/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
behavioral/memento/p1/src/: main.py
behavioral/memento/p1/src/documents/: settings.py
behavioral/memento/p1/tests/integration/: test_api.py
behavioral/memento/p1/tests/unit/: test_document_memento.py
behavioral/observer/p4/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
behavioral/observer/p4/src/cloud_event_notifier/: main.py
behavioral/observer/p4/tests/integration/: test_cli.py
behavioral/observer/p4/tests/unit/: test_entities.py  test_observers.py  test_sns_publisher.py  test_use_cases.py
behavioral/template_method/p4/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
behavioral/template_method/p4/src/data_processing_pipeline/: main.py
behavioral/template_method/p4/tests/integration/: test_cli.py
behavioral/template_method/p4/tests/unit/: test_csv_pipeline.py  test_hook_and_exceptions.py  test_json_pipeline.py  test_repository.py
behavioral/visitor/p1/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
behavioral/visitor/p1/src/query_ast/: __init__.py  main.py
behavioral/visitor/p1/tests/: conftest.py
behavioral/visitor/p1/tests/integration/: test_api.py
behavioral/visitor/p1/tests/unit/: test_query_explainer.py  test_query_optimizer.py  test_structure.py  (+3 more)
behavioral/visitor/p2/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
behavioral/visitor/p2/tests/: conftest.py
behavioral/visitor/p3/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
creational/abstract_factory/p1/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
creational/abstract_factory/p1/tests/: conftest.py
creational/abstract_factory/p5/: .env.example  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
creational/abstract_factory/p5/src/: manage.py
creational/builder/p2/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
creational/builder/p2/tests/: conftest.py
creational/builder/p5/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
creational/builder/p5/tests/: conftest.py
creational/factory_method/p5/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
creational/factory_method/p5/tests/: conftest.py
creational/prototype/p5/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
creational/prototype/p5/tests/: conftest.py
creational/singleton/p2/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
creational/singleton/p2/src/: main.py
structural/adapter/p3/: .env.example  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
structural/adapter/p3/src/: manage.py
structural/adapter/p4/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
structural/adapter/p5/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
structural/adapter/p5/tests/: conftest.py
structural/bridge/p1/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
structural/bridge/p1/scripts/: localstack-init.sh
structural/bridge/p1/src/: main.py
structural/bridge/p3/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
structural/bridge/p3/src/: manage.py
structural/bridge/p4/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
structural/bridge/p4/data/: sales.json
structural/bridge/p4/tests/: conftest.py
structural/bridge/p5/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
structural/bridge/p5/tests/: conftest.py
structural/composite/p2/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
structural/composite/p2/tests/: conftest.py
structural/composite/p4/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
structural/composite/p4/examples/: build_all.yml
structural/composite/p4/tests/: conftest.py
structural/decorator/p4/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
structural/decorator/p4/tests/: conftest.py
structural/facade/p1/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
structural/facade/p1/scripts/: init-localstack.sh
structural/facade/p1/src/: main.py
structural/facade/p1/tests/: conftest.py
structural/facade/p2/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
structural/facade/p2/tests/: conftest.py
structural/facade/p3/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
structural/facade/p4/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
structural/facade/p4/tests/: conftest.py
(+2153 files in other folders)
