[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "queue-bridge"
version = "0.1.0"
description = "Bridge pattern: Queue Bridge (Celery/Redis, RabbitMQ, SQS) via Django"
requires-python = ">=3.11"
dependencies = [
    "django>=4.2",
    "redis>=5.0",
    "pika>=1.3",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-django>=4.8",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "faker>=25.0",
    "django-stubs>=4.2",
    "boto3-stubs[sqs]>=1.34",
    "moto[sqs]>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "S", "B", "A", "C4", "PT"]
ignore = ["ANN101", "ANN102", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN"]
"src/task_queue/infrastructure/brokers.py" = ["BLE001", "S110"]
"conftest.py" = ["ANN"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "migrations/"]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "task_queue.settings"

[tool.pytest.ini_options]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "task_queue.settings"
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
    "-v",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__init__.py", "*/migrations/*", "src/manage.py", "*/wsgi.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "raise NotImplementedError",
]
